--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
     <script src="boid.js"></script>
+    <script src="quadtree.js"></script>
   </head>
 
   <body>
